# enccs_cmake_workshop

./: .buildinfo  .clang-format  .clang-format.prev  .clang-tidy  .clang-tidy.prev  .clangd  .gitignore  .nvim.lua  .vimrc.lua  clean_builds.sh  index.html  link_dotfiles_from_previous_dir.sh  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json
cmake-syntax/: index.html
content/code/day-1/00_hello-cxx/: CMakeLists.txt  hello.cpp
content/code/day-1/01_libraries-cxx/: .cmake-format  CMakeLists.txt  hello-world.cpp
content/code/day-1/01_libraries-cxx/buiild/: hello-world
content/code/day-1/02_conditionals-cxx/: CMakeLists.txt  Message.cpp
content/code/day-1/02_conditionals-cxx/solution/: CMakeLists.txt
content/code/day-1/03_loops-cxx/: CMakeLists.txt  compute-areas.cpp  geometry_circle.cpp  geometry_circle.hpp  geometry_polygon.cpp  geometry_polygon.hpp  geometry_rhombus.cpp  geometry_rhombus.hpp  geometry_square.cpp  geometry_square.hpp
content/code/day-1/04_options-cxx/: CMakeLists.txt  Message.hpp  hello-world.cpp
content/code/day-1/04_options-cxx/solution/: CMakeLists.txt
content/code/day-1/05_hello-ctest/: CMakeLists.txt  main.cpp  sum_integers.cpp  test.cpp
content/code/day-1/06_bash-ctest/: CMakeLists.txt  main.cpp  test.cpp  test.sh
content/code/day-1/06_bash-ctest/solution/: CMakeLists.txt
content/code/day-1/07_python-ctest/: CMakeLists.txt  sum_integers.hpp  test.sh
content/code/day-1/07_python-ctest/solution/: CMakeLists.txt
content/code/day-1/08_ctest-labels/: CMakeLists.txt
content/code/day-1/08_ctest-labels/solution/: CMakeLists.txt
content/code/day-1/09_ctest-will-fail/: CMakeLists.txt
content/code/day-1/10_ctest-cost/: CMakeLists.txt
content/code/day-1/11_ctest-timeout/: CMakeLists.txt
content/code/day-1/11_ctest-timeout/solution/: CMakeLists.txt
content/code/day-1/12_OS/solution/: CMakeLists.txt
content/code/day-1/13_processor/solution/: CMakeLists.txt
content/code/day-1/15_sys_preproc/solution/: CMakeLists.txt  hello-world.cpp
content/code/day-1/16_configure/solution/: processor-info.cpp
content/code/day-1/17_find_cffi/: CMakeLists.txt
content/code/day-1/17_find_cffi/solution/: CMakeLists.txt
content/code/day-1/18_pre_post-f/: CMakeLists_start.txt  echo-file.py  example.f90  static-size.py
content/code/day-1/19_check_compiler_flag/: CMakeLists.txt  asan-example.cpp
content/code/day-1/19_check_compiler_flag/solution/: CMakeLists.txt
content/code/day-1/20_check_source_runs/: CMakeLists.txt  use-uuid.cpp
content/code/day-1/20_check_source_runs/solution/: CMakeLists.txt
content/code/day-2/21_automata-cxx/: CMakeLists.txt
content/code/day-2/21_automata-cxx/solution/: CMakeLists.txt
content/code/day-2/21_automata-cxx/src/: CMakeLists.txt  main.cpp
content/code/day-2/21_automata-cxx/src/evolution/: CMakeLists.txt  evolution.cpp
content/code/day-2/21_automata-cxx/src/initial/: CMakeLists.txt  initial.cpp
content/code/day-2/21_automata-cxx/src/io/: CMakeLists.txt  io.cpp
content/code/day-2/21_automata-cxx/src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
content/code/day-2/22_taskloop/solution/: CMakeLists.txt  taskloop.cpp
content/code/day-2/23_mpi-cxx/: CMakeLists.txt
content/code/day-2/23_mpi-cxx/solution/: CMakeLists.txt
content/code/day-2/26_more-catch2/: CMakeLists.txt  sum_integers.cpp  test.cpp
content/code/day-2/26_more-catch2/solution/: CMakeLists.txt
content/code/day-2/29_visibility-levels/solution/: CMakeLists.txt  bank.cpp
content/code/day-2/29_visibility-levels/solution/account/: CMakeLists.txt  account.cpp  account.hpp
cxx-fortran/: index.html
dependencies/: index.html
environment/: index.html
fetch-content/: index.html
genindex/: index.html
guide/: index.html
hello-cmake/: index.html
hello-ctest/: index.html
probing/: index.html
python-bindings/: index.html
quick-reference/: index.html
search/: index.html
setup/: index.html
targets/: index.html
tips-and-tricks/: index.html
zbibliography/: index.html
